@@ -11,6 +11,7 @@ V.Next
 - [MAJOR] New API on KeyAccessor (#1309)
 - [PATCH] Fixes deprecated PackageInfo.signatures and PackageManager.GET_SIGNATURES (#1256)
 - [MINOR] Converting Classic Azure DevOps Pipelines to YAML (#1274)
+- [MINOR] Renaming BrokerData to AppData
 
 Version 3.3.1
 ----------
